Complete the task index.html

--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello World</h1>
-    <p>My first paragraph</p>
-    <p>Second <em>paragraph</em></p>
-    
-    <li>p</li>
-    <li>pizza</li>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My favourite car</title>
+  </head>
+  <body bgcolor="grey">
+    <h1>Volkswagen Arteon</h1>
+    <img src="./vw-arteon-359-235.jpg" alt="VW-arteon" />
+    <p>
+      <em
+        >Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+        dicta sequi ab commodi labore quasi in voluptatibus illo ut quae enim
+        odio quisquam suscipit dolores expedita alias, perferendis quaerat quia?
+      </em>
+    </p>
+    <h2>Why exactly Arteon?</h2>
+    <ol>
+      <li><b>Dynamics</b></li>
+      <li><b>Comfort</b></li>
+      <li><b>Security</b></li>
+    </ol>
+  </body>
 </html>
-
