--- a/index.html
+++ b/index.html
@@ -7,21 +7,31 @@
     <title>My favourite car</title>
   </head>
   <body bgcolor="grey">
-    <h1>Volkswagen Arteon</h1>
-    <img src="./vw-arteon-359-235.jpg" alt="VW-arteon" />
-    <p>
-      <em
-        >Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-        dicta sequi ab commodi labore quasi in voluptatibus illo ut quae enim
-        odio quisquam suscipit dolores expedita alias, perferendis quaerat quia?
-      </em>
-    </p>
-    <h2>Why exactly Arteon?</h2>
-    <ol>
-      <li><b>Dynamics</b></li>
-      <li><b>Comfort</b></li>
-      <li><b>Security</b></li>
-    </ol>
-    <button>BUY NOW</button>
+    <header>
+      <h1>Volkswagen Arteon</h1>
+    </header>
+    <main>
+      <article>
+        <h2>Arteon</h2>
+      <img src="./assets/img/vw-arteon-359-235.jpg" alt="VW-arteon" />
+        <p>
+          <em
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            dicta sequi ab commodi labore quasi in voluptatibus illo ut quae enim
+            odio quisquam suscipit dolores expedita alias, perferendis quaerat quia?
+          </em>
+        </p>
+        <section>
+          <h2>Why exactly Arteon?</h2>
+          <ol>
+            <li><b>Dynamics</b></li>
+            <li><b>Comfort</b></li>
+            <li><b>Security</b></li>
+          </ol>
+          <button><a href="#">My CV</a></button>
+        </section>
+      </article>
+    </main>
+    <footer>All rights reserved by the author</footer>
   </body>
 </html>
