Add new pages CV

--- a/assets/pages/pages1.html
+++ b/assets/pages/pages1.html
@@ -8,15 +8,15 @@
   </head>
   <body bgcolor="grey">
     <header>
-      <h1>Volkswagen Arteon</h1>
+      <h1>Lorem, ipsum.</h1>
     </header>
     <main>
       <article>
-        <h2>Arteon</h2>
+        <h2>Lorem, ipsum dolor.</h2>
       <img src="./assets/img/vw-arteon-359-235.jpg" alt="VW-arteon" />
         <p>
-          <em
-            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+          <em>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
             dicta sequi ab commodi labore quasi in voluptatibus illo ut quae enim
             odio quisquam suscipit dolores expedita alias, perferendis quaerat quia?
           </em>
@@ -28,7 +28,7 @@
             <li><b>Comfort</b></li>
             <li><b>Security</b></li>
           </ol>
-          <button><a href="/assets/pages/pages1.html">My CV</a></button>
+          <button><a href="#">My CV</a></button>
         </section>
       </article>
     </main>
