--- a/assets/pages/pages1.html
+++ b/assets/pages/pages1.html
@@ -8,29 +8,49 @@
   </head>
   <body bgcolor="grey">
     <header>
-      <h1>Lorem, ipsum.</h1>
+      <h1>Maksim Kuharskiy</h1>
     </header>
     <main>
       <article>
-        <h2>Lorem, ipsum dolor.</h2>
-      <img src="./assets/img/vw-arteon-359-235.jpg" alt="VW-arteon" />
-        <p>
-          <em>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            dicta sequi ab commodi labore quasi in voluptatibus illo ut quae enim
-            odio quisquam suscipit dolores expedita alias, perferendis quaerat quia?
-          </em>
-        </p>
+        <img src="/assets/img/0x0.jpg" alt="Warren Buffett ">
         <section>
-          <h2>Why exactly Arteon?</h2>
-          <ol>
-            <li><b>Dynamics</b></li>
-            <li><b>Comfort</b></li>
-            <li><b>Security</b></li>
-          </ol>
-          <button><a href="#">My CV</a></button>
+          <h2><b>My skills</b></h2>
+          <ul>
+            <li><em>Lorem, ipsum.</em></li>
+            <li><em>Lorem, ipsum.</em></li>
+            <li><em>Lorem, ipsum.</em></li>
+            <li><em>Lorem, ipsum.</em></li>
+          </ul>
+        </section>
+        <article>
+          <section>
+            <h2><b>Professional summary</b></h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores,
+              aperiam! Dolorum blanditiis minima dignissimos, nam soluta dicta
+              consectetur quos expedita ipsam ad? Sit fuga sapiente aliquid,
+              cupiditate ullam magnam odio distinctio ex quibusdam incidunt, sed
+              minus delectus porro quisquam doloremque alias. Tempore reiciendis
+              sunt ad cupiditate quidem neque fugit error? Vero, facere modi aut
+              velit at eaque dolorem non. Esse beatae optio nobis porro,
+              laudantium sapiente dolor, quam quod aliquam similique odio
+              dolores atque consequuntur quibusdam cumque commodi odit ipsam
+              culpa, quidem maxime ipsa ut libero debitis nisi! Consequuntur
+              unde recusandae magni similique sint debitis aperiam, vero
+              perspiciatis facere asperiores?
+            </p>
+          </section>
+        </article>
+        <section>
+          <h2><b>Contact</b></h2>
+          <ul>
+            <li><b>Phone: </b>+380955637016</li>
+            <li><b>Enail: </b>maxes2805582@gmail.com</li>
+            <li><b>Adress: </b>Ukraine,Kharkiv</li>
+          </ul>
         </section>
       </article>
+      <button><a href="../../index.html">Go Back</a></button>
     </main>
     <footer>All rights reserved by the author</footer>
   </body>
