--- a/task.html
+++ b/task.html
@@ -1,5 +1,5 @@
 <!-- (header>nav>ul>(li>a[href="#article-$" id='article-$']{Article $})*10)+(article#article-$>h2.article-heading{Article $}+(p>lorem100)+a[href="#"]{Up})*10 -->
-(<header>
+<header>
   <nav>
     <ul>
       <li><a href="#article-1" id="article-1">Article 1</a></li>
@@ -12,46 +12,56 @@
       <li><a href="#article-8" id="article-8">Article 8</a></li>
       <li><a href="#article-9" id="article-9">Article 9</a></li>
       <li><a href="#article-10" id="article-10">Article 10</a></li>
-      <article id="article-1">
-        <h2 class="article-heading">Article 1</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum officiis soluta, iusto provident quos omnis ratione qui doloribus eos nisi quisquam deserunt laboriosam beatae aliquam sequi obcaecati. Accusantium mollitia delectus molestiae dolores? Unde amet rerum repellendus voluptatibus accusantium illum, quidem hic cum iusto ex provident voluptates nulla, suscipit asperiores ab ullam aut atque possimus neque sapiente totam magni expedita quo. Impedit, deserunt illum? Excepturi odio nulla deleniti ipsum consequatur corrupti dicta consectetur adipisci inventore. Provident impedit dolor consectetur, ipsa omnis consequuntur autem adipisci atque aut quisquam laborum reiciendis magnam assumenda, quaerat, pariatur animi dignissimos est esse id optio perspiciatis excepturi.<a href="#">Up</a></p>
-      </article>
-      <article id="article-2">
-        <h2 class="article-heading">Article 2</h2>
-        <p>Dolores similique maxime enim voluptatem voluptas expedita perferendis temporibus voluptates, quas laboriosam eveniet? Ipsa, eos at eius omnis eaque sed ad doloribus eligendi. Totam ipsa minima laborum, vitae est saepe tempora dolores ullam, maxime, asperiores minus dolorem neque ab possimus. Eos perspiciatis similique, at cumque atque ipsa asperiores laudantium impedit magni consequatur! Officiis blanditiis debitis tempore corporis tenetur, dolores saepe illo cupiditate quis! Facere quos odio suscipit aspernatur recusandae, sapiente esse blanditiis voluptas laudantium, neque alias expedita delectus distinctio eveniet possimus id enim et temporibus quae inventore eius. Porro, dolorum rem? Ducimus adipisci dolor delectus quaerat sint, deserunt id assumenda.<a href="#">Up</a></p>
-      </article>
-      <article id="article-3">
-        <h2 class="article-heading">Article 3</h2>
-        <p>Vitae ipsam modi mollitia impedit quo officiis sequi quaerat cumque exercitationem debitis. Iusto officia porro cumque nesciunt, maxime beatae, rerum reiciendis iste necessitatibus eveniet voluptatibus, nemo explicabo officiis laboriosam aspernatur et eum veniam quasi? Odio quo quis esse voluptatibus mollitia rem eos repellat numquam ipsam, voluptas corrupti maiores praesentium quae dolor ullam deleniti possimus, minima, animi qui. Error nostrum minima quam deleniti iste mollitia aliquam, ullam repellendus assumenda eligendi, officia voluptatum tempore at. Corporis porro non provident! Eos alias, quas ea quisquam et hic laboriosam quaerat, fuga voluptatem similique voluptate distinctio sapiente quidem iusto reprehenderit doloremque odio deserunt amet. Natus?<a href="#">Up</a></p>
-      </article>
-      <article id="article-4">
-        <h2 class="article-heading">Article 4</h2>
-        <p>Hic, dignissimos veritatis ab optio harum, est ullam eligendi explicabo asperiores nobis laboriosam facere autem vitae excepturi cum, omnis nesciunt error earum quidem nisi molestias voluptatibus aut iusto. Et nobis hic error saepe omnis provident ipsa eligendi perferendis rerum nisi blanditiis a ipsum eos numquam necessitatibus aut minima odio fugit, deleniti, maxime impedit enim quis earum incidunt? Nesciunt accusantium magni laborum commodi amet animi odio qui vero accusamus hic id optio officiis veritatis doloribus iure ratione explicabo, a sunt neque expedita porro. Magni maiores mollitia, quas aperiam, et magnam quam libero distinctio perferendis tenetur quae incidunt in iste? Voluptatibus, numquam.<a href="#">Up</a></p>
-      </article>
-      <article id="article-5">
-        <h2 class="article-heading">Article 5</h2>
-        <p>Voluptatem modi facere quaerat numquam corporis, voluptate repudiandae dolor enim omnis ipsa laborum iusto dicta quo magnam, velit fugit culpa quas nesciunt natus iste facilis quisquam. Molestiae odio porro non totam culpa esse atque earum nisi. Ab fugit cumque expedita ex aut mollitia atque ipsum voluptatibus consectetur, adipisci est laborum nobis quis placeat similique tempore qui. Repellat inventore cumque tempora nisi? Enim odio laboriosam ad minima quaerat hic cumque possimus cupiditate rerum non consequuntur, inventore pariatur aspernatur. Dolorum, amet iusto dolores culpa quam quasi sequi, blanditiis unde veniam cupiditate voluptatem. Omnis sequi perferendis porro perspiciatis at, quod id animi eligendi?<a href="#">Up</a></p>
-      </article>
-      <article id="article-6">
-        <h2 class="article-heading">Article 6</h2>
-        <p>Doloribus, consequatur autem. Magni cum nulla voluptas porro tenetur, odio consequuntur eos placeat nemo. Animi ab commodi unde ex delectus explicabo earum, quae eos iusto similique? Sequi odio distinctio saepe itaque asperiores aperiam minima exercitationem at corrupti ullam error sunt cum commodi, autem voluptatum vitae nesciunt! Minus, reprehenderit incidunt? Corporis ratione, fugit incidunt placeat commodi in repudiandae quisquam accusantium voluptatem ducimus quod nobis neque dolore totam doloribus magni quam consequuntur ab illum tempore libero ea odio! Autem corporis magnam vitae debitis repudiandae iste eum ratione, praesentium error porro labore! Recusandae itaque dolor a quibusdam, id repellat quia excepturi voluptate quos.<a href="#">Up</a></p>
-      </article>
-      <article id="article-7">
-        <h2 class="article-heading">Article 7</h2>
-        <p>Maiores alias perspiciatis, nemo delectus reiciendis tenetur incidunt officia esse debitis magnam nobis, officiis ducimus veniam minima provident eos maxime. Nisi, distinctio? Perferendis, nobis consequatur? Accusamus ipsum voluptatem aspernatur. Quas aperiam deserunt accusantium nemo voluptatum labore qui velit debitis exercitationem sed quis, sapiente veniam molestiae iusto veritatis suscipit vel nesciunt dolorum sunt, laboriosam necessitatibus unde saepe amet! Harum quis doloribus iure omnis consectetur quo labore saepe. Alias, atque fuga, unde eum nemo ipsum quisquam at ab, dolorem quo quae quis ut. Culpa neque quis eligendi labore, harum hic nisi id error ipsam officiis dolores minima. Soluta ipsum odit optio tempore.<a href="#">Up</a></p>
-      </article>
-      <article id="article-8">
-        <h2 class="article-heading">Article 8</h2>
-        <p>Placeat delectus doloribus est distinctio? Dolore nesciunt dolores excepturi mollitia, vitae, ipsam aut expedita deserunt laboriosam possimus dicta ea ducimus saepe, animi explicabo voluptas minima nulla molestiae! Expedita quos magnam commodi ratione nihil consequuntur sint ex tenetur aperiam iure vel, nostrum ut excepturi porro similique, nemo nam optio quaerat eius, suscipit esse officiis in? Repudiandae, consequatur magnam facilis aperiam nostrum perferendis! Quasi quos debitis molestiae ipsa fugit, facere sit velit, ab cum illum deleniti perspiciatis distinctio voluptas impedit aliquid ipsum, ducimus maiores dolor similique? Quia similique vitae laborum iusto sapiente, harum repellendus minus labore voluptates illo provident nostrum ad nihil.<a href="#">Up</a></p>
-      </article>
-      <article id="article-9">
-        <h2 class="article-heading">Article 9</h2>
-        <p>Rem in harum soluta optio! Quam asperiores cumque corporis tempora harum velit praesentium distinctio voluptates voluptatum. Similique repellendus ipsum magnam voluptatibus tenetur repudiandae, culpa soluta. Fugit quam soluta quisquam ad. Sed quod distinctio unde saepe voluptatum dolore, voluptatem illum reprehenderit! Laboriosam hic dolore tenetur dolor. Voluptate quo totam non ea ad necessitatibus odit tempora, iure voluptatem labore sequi suscipit porro deserunt quas. Nisi eligendi dolores numquam accusamus autem quod excepturi exercitationem eos quia dolor tenetur est eum sunt, obcaecati dolorem aliquam officia atque quaerat minus doloremque iste aliquid, itaque optio? Delectus esse dolorum officia veniam corporis dicta molestiae ad officiis.<a href="#">Up</a></p>
-      </article>
-      <article id="article-10">
-        <h2 class="article-heading">Article 10</h2>
-        <p>Eos excepturi cum praesentium tenetur. Vero soluta nesciunt odit dignissimos nostrum officiis recusandae tenetur! Rerum, ratione deserunt. Necessitatibus est sapiente facilis, fugiat praesentium iusto aliquam exercitationem odio veniam amet corrupti dolorum, earum repellendus, quidem error dolores quo rem! Tenetur sapiente laudantium adipisci unde eaque voluptatibus at nisi reiciendis eius maiores earum, voluptatum veritatis temporibus iste accusantium quia laborum fugit deserunt magnam, quis officia. Itaque, exercitationem dicta in omnis dolores velit, unde nulla, laboriosam libero doloremque magni. Non officia culpa sed soluta, pariatur praesentium reiciendis nisi, molestias tempora nulla totam in incidunt omnis vero sit eius magni accusamus fuga rem! Praesentium!<a href="#">Up</a></p>
-      </article>
     </ul>
   </nav>
 </header>
+<article id="article-1">
+  <h2 class="article-heading">Article 1</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis rem libero fugit dolorum, at molestias, minus architecto harum optio praesentium sequi ab? Id, minus iste enim beatae, eligendi facilis iure nobis consectetur veritatis ab provident eius quod earum omnis adipisci eos deserunt a quisquam quis delectus illo consequuntur deleniti. Perferendis maxime placeat veritatis ab, voluptatibus nostrum accusamus inventore debitis eligendi in, aut nihil recusandae qui saepe quas autem deleniti, esse similique voluptatem consequuntur ducimus? Nobis nam ratione sit cumque dolor nemo itaque, optio beatae dolore voluptas voluptatum placeat quae rerum. Enim praesentium illum ipsa soluta rem, molestias cupiditate neque voluptate.</p>
+  <a href="#">Up</a>
+</article>
+<article id="article-2">
+  <h2 class="article-heading">Article 2</h2>
+  <p>Ducimus officia pariatur, minima, fuga reiciendis architecto repudiandae tenetur rem natus fugit commodi iure asperiores. Ratione, a officia. Dolorum delectus dicta, praesentium aspernatur suscipit accusamus laborum blanditiis nesciunt inventore placeat obcaecati vel corporis, veritatis tempore sed alias quo quia iusto! Ipsum dolorem optio nihil exercitationem amet quod iusto libero eaque provident voluptatum illum impedit distinctio quidem blanditiis natus debitis odio, fugiat, corrupti inventore in? Obcaecati vero, aut laborum id ea vel molestias, harum consequatur consectetur modi repellendus cumque eveniet explicabo incidunt deserunt nostrum odit deleniti voluptatibus neque natus adipisci, temporibus culpa. Obcaecati, veritatis enim doloremque libero omnis ut perspiciatis maxime!</p>
+  <a href="#">Up</a>
+</article>
+<article id="article-3">
+  <h2 class="article-heading">Article 3</h2>
+  <p>Alias voluptatum consectetur quidem qui porro? Deserunt aliquam asperiores excepturi perferendis eligendi cupiditate atque a in nulla? Tempore provident accusantium itaque voluptates exercitationem. Facere incidunt perspiciatis mollitia, non laborum eos vel, ratione commodi ipsa dolorum cum? Sed esse illo alias ipsum rem totam dicta ex odio possimus aliquid inventore porro temporibus omnis culpa, et, ducimus necessitatibus praesentium. Ipsa tenetur, recusandae, minima praesentium nihil suscipit quod facilis nisi ipsam officia enim nesciunt laboriosam fugit sapiente odit debitis corporis commodi? Doloribus at non architecto temporibus fugiat libero ipsa! Inventore a illum dolore, maiores praesentium assumenda dolores, maxime eos obcaecati non corrupti cupiditate!</p>
+  <a href="#">Up</a>
+</article>
+<article id="article-4">
+  <h2 class="article-heading">Article 4</h2>
+  <p>Ipsa eligendi at exercitationem molestias reiciendis iure odit dolores officiis vero, distinctio fugiat. Tenetur, possimus modi. Aut sit expedita in vel non adipisci ipsam, dignissimos consectetur ab corporis esse nisi sint provident dolorem minus? A voluptatum, quis maiores recusandae mollitia doloribus natus atque dolorum eveniet sed itaque. Modi libero autem itaque illum dolor, quae unde doloremque laudantium! Tempora vitae possimus dignissimos sunt, sed dolor, cum ducimus quae explicabo aspernatur laborum neque reiciendis ipsam recusandae consequuntur voluptatem perferendis quasi dolorum id! Cum adipisci quo repellendus voluptatem optio incidunt corrupti obcaecati, repudiandae harum commodi dolorum sit dolorem eveniet sapiente voluptas ipsam modi?</p>
+  <a href="#">Up</a>
+</article>
+<article id="article-5">
+  <h2 class="article-heading">Article 5</h2>
+  <p>Quod id libero debitis aliquid non quasi minima, minus sit ipsum placeat ad porro aliquam voluptate autem officia nobis tempora error repudiandae illo aperiam architecto! Soluta ea sed aspernatur magnam reprehenderit, explicabo porro doloribus similique iste ex nostrum deleniti quam optio consequatur inventore temporibus? Repellat beatae ut ea excepturi similique blanditiis numquam dignissimos officia repudiandae autem accusamus iste aliquam earum voluptatem, animi tempora? Quisquam rerum impedit iure similique qui accusantium, tempore reiciendis veniam ipsam soluta quibusdam voluptates harum molestias, quia excepturi cumque blanditiis animi culpa. Earum quo veniam quod tempora doloribus recusandae autem, iste, nam sapiente aliquid commodi nisi explicabo.</p>
+  <a href="#">Up</a>
+</article>
+<article id="article-6">
+  <h2 class="article-heading">Article 6</h2>
+  <p>Tempora beatae veniam consequatur quae debitis libero accusamus qui ipsam, autem ut laborum. Dolorem, obcaecati labore, fugit doloremque delectus magni quos repudiandae nobis deserunt consectetur praesentium reprehenderit porro? Officiis quos neque enim temporibus at perferendis aliquam aspernatur suscipit necessitatibus, id tenetur nisi, voluptas odio. Reiciendis animi, quibusdam optio minima facere labore error possimus quidem dignissimos quis illum deserunt nesciunt iste accusantium consequuntur adipisci sunt omnis soluta aspernatur? Reprehenderit hic totam error, maxime ipsam ipsum facere ab atque ullam aut non eveniet, fugiat eaque temporibus voluptas eum odio accusamus fuga eligendi voluptatibus delectus consequuntur odit neque? Officia tempora inventore sed ad?</p>
+  <a href="#">Up</a>
+</article>
+<article id="article-7">
+  <h2 class="article-heading">Article 7</h2>
+  <p>Dolorem id dicta ipsum debitis provident? Omnis eveniet, ea quod pariatur minima quisquam aut, aperiam repudiandae totam voluptas dignissimos laboriosam deleniti neque, explicabo quas? Ducimus consequuntur, obcaecati aliquid repudiandae nisi similique repellendus doloribus laudantium, corporis quisquam provident voluptates harum, modi fuga quas exercitationem minima vel hic impedit eum architecto assumenda cum? Deleniti, amet. Repellendus reprehenderit reiciendis nam veritatis sequi illo quibusdam repellat tempora quisquam ea, ipsum nulla quidem assumenda, magni ullam iusto dolor natus voluptate eaque animi dignissimos pariatur suscipit? Magni eligendi et, necessitatibus quaerat voluptatum deleniti ex asperiores culpa sunt? Esse voluptatem consequuntur dignissimos velit illo deserunt mollitia odio!</p>
+  <a href="#">Up</a>
+</article>
+<article id="article-8">
+  <h2 class="article-heading">Article 8</h2>
+  <p>Eaque tempora architecto voluptates ipsum laudantium? Laudantium maxime delectus nihil ducimus eum quia iste inventore magnam libero veniam quasi cumque harum quae voluptatum necessitatibus officia voluptas vero eaque, id, deserunt assumenda. Ad quas quia itaque ea animi quibusdam aspernatur sequi eius praesentium. Numquam ullam aspernatur illo magni voluptas cum, rerum, inventore eligendi quod maxime animi ex quam aperiam iure maiores incidunt laborum est odio exercitationem? Possimus rerum voluptatum asperiores fugit, aliquam impedit dolores reiciendis pariatur excepturi consequuntur laborum, dicta optio dolor quam accusantium dolorem, a repellat? Quod enim voluptatem dolorum vero quasi in nihil, unde dicta illo ea cum numquam?</p>
+  <a href="#">Up</a>
+</article>
+<article id="article-9">
+  <h2 class="article-heading">Article 9</h2>
+  <p>Ipsam minima earum inventore alias quod incidunt optio veritatis quia eveniet, minus nulla maxime molestias repellat. Sequi veniam soluta tempore obcaecati quis ratione quidem sunt numquam dolores facere quos in exercitationem cumque inventore molestias, quisquam blanditiis necessitatibus! Enim ipsa, a omnis aperiam nesciunt aut sapiente illo amet et molestias ex in temporibus voluptate labore alias corporis quod voluptatum nam officiis nemo ducimus eveniet dolor cumque. Ullam temporibus sapiente magni fuga, illo eligendi asperiores. Voluptas autem tempore, similique, culpa accusamus recusandae architecto sunt, possimus excepturi non nemo neque voluptate ab totam qui. Maiores praesentium commodi ut reiciendis ab recusandae, pariatur hic?</p>
+  <a href="#">Up</a>
+</article>
+<article id="article-10">
+  <h2 class="article-heading">Article 10</h2>
+  <p>Sit assumenda nihil possimus. Aut, doloremque expedita magnam enim molestias eligendi quae, libero autem quam quia, fugit quo odio explicabo veniam aperiam vero corporis rerum hic neque omnis ipsum iusto beatae corrupti atque. Quod repudiandae incidunt cum provident sint suscipit assumenda beatae facere modi officia sunt harum possimus doloremque voluptate quidem, ea delectus non quaerat eveniet maxime qui consectetur! Quidem autem architecto ipsa vitae ipsam fuga numquam consequatur incidunt veniam maiores! Dolorum asperiores adipisci eveniet at nesciunt accusantium rerum nemo et ullam numquam sequi delectus, voluptatum error voluptas nihil sit quibusdam, labore molestiae quam necessitatibus. Eum sapiente autem eius non?</p>
+  <a href="#">Up</a>
+</article>
