--- a/index.html
+++ b/index.html
@@ -4,34 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My favourite car</title>
+    <title>Css-test</title>
+    <link href="/assets/style/style.css" rel="stylesheet">
+    
   </head>
   <body bgcolor="grey">
-    <header>
-      <h1>Volkswagen Arteon</h1>
-    </header>
-    <main>
-      <article>
-        <h2>Arteon</h2>
-      <img src="./assets/img/vw-arteon-359-235.jpg" alt="VW-arteon" />
-        <p>
-          <em
-            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            dicta sequi ab commodi labore quasi in voluptatibus illo ut quae enim
-            odio quisquam suscipit dolores expedita alias, perferendis quaerat quia?
-          </em>
-        </p>
-        <section>
-          <h2>Why exactly Arteon?</h2>
-          <ol>
-            <li><b>Dynamics</b></li>
-            <li><b>Comfort</b></li>
-            <li><b>Security</b></li>
-          </ol>
-          <button><a href="/assets/pages/pages1.html">My CV</a></button>
-        </section>
-      </article>
-    </main>
+    <h1>Lorem, ipsum.</h1>
+    <p class="text-p1" id="id-text-p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem vitae ducimus beatae quis possimus illo tempore rem laboriosam quibusdam quae! Illo ipsum impedit inventore, consequuntur enim quas omnis maxime. Voluptate alias dicta sint. Ut, enim rerum voluptates maiores odit temporibus?</p>
+    <p>Odit architecto temporibus incidunt et delectus rem beatae, culpa amet neque tempora reiciendis illo obcaecati, nihil error laboriosam. Perspiciatis cumque nesciunt ad incidunt sapiente, velit sequi, vel iste magnam dolorem id distinctio tempora nobis libero voluptatem perferendis et corrupti recusandae.</p>
+    <p>Error incidunt explicabo nobis omnis laudantium! In deserunt dolorem aut saepe minus? Natus soluta esse inventore in voluptatum nesciunt omnis dolorem harum unde dolorum laboriosam quisquam ipsam quaerat, eius mollitia doloribus repellat? Quos corporis porro nisi vitae nam quidem obcaecati.</p>
+    <p>Tempora id repellat molestias esse deserunt expedita at voluptatibus non consequuntur cumque, repudiandae, deleniti fugiat aut assumenda temporibus provident hic incidunt magni ex? Quam, eaque odit reiciendis, aut blanditiis nobis modi maiores fugit in quae minima iste est. Laudantium, atque?</p>
     <footer>All rights reserved by the author</footer>
   </body>
 </html>
