--- a/index.html
+++ b/index.html
@@ -9,18 +9,8 @@
   </head>
   <body bgcolor="grey">
 <main>
-  <article class="article-1">
-    <h1 class="article-header">Article 1</h1>
-    <p class="text-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quae voluptatum aliquam distinctio eligendi vero ipsum, quod aspernatur. Aspernatur inventore temporibus rerum veritatis laborum, similique culpa corrupti eaque? Maxime libero voluptate unde quas perferendis repellendus perspiciatis similique voluptates doloremque ipsam velit corporis labore, cum nulla culpa distinctio? Voluptatem natus nobis quibusdam, reprehenderit amet nulla laboriosam esse provident et mollitia, tenetur aliquid assumenda corrupti? Omnis quae, temporibus, libero voluptatibus accusamus culpa dolor modi ex hic recusandae quis sunt maxime debitis tempore labore, necessitatibus numquam velit nihil repellendus tenetur soluta odio reiciendis voluptatum! Unde corrupti perferendis provident minus vel est possimus aut!</p>
-  </article>
-  <article class="article-2">
-    <h1 class="article-header">Article 2</h1>
-    <p class="text-2">Itaque, saepe quidem quisquam temporibus aliquam perspiciatis, consequuntur consequatur officiis necessitatibus hic numquam quod minus eveniet natus veritatis ex doloremque impedit dolores pariatur! Dolor vitae quo nobis expedita. Quos excepturi corporis ab quidem qui expedita aperiam, cum recusandae suscipit culpa quae hic, saepe fugiat minus consectetur cumque voluptatem aut! Quos alias aliquid rem recusandae optio est commodi, ipsam necessitatibus cumque perferendis? Voluptatibus illum libero, fugiat, similique impedit quaerat dolor voluptatem porro saepe nisi obcaecati necessitatibus ipsum temporibus odit eaque molestiae beatae. Nemo veritatis doloribus, reprehenderit tempore totam aliquam ducimus similique, deleniti harum iste sit sed error nobis aut! Odio, laborum?</p>
-  </article>
-  <article class="article-3">
-    <h1 class="article-header">Article 3</h1>
-    <p class="text-3">Sequi velit iste harum, nihil magni vitae, sapiente, eos quisquam molestiae illum a? Autem quisquam ex voluptatem officiis consequuntur sed labore minus! Dolorem expedita nihil suscipit. Rem soluta minus asperiores accusamus corporis non pariatur mollitia sequi. Magni, ex officia velit voluptatibus molestiae distinctio quisquam non reiciendis incidunt temporibus aliquid nihil amet veritatis fugiat dolor. Sit molestias ipsa voluptatibus repellat sed hic adipisci ea praesentium aliquam illo ullam quod consequuntur temporibus nostrum earum numquam voluptate quisquam fuga minima, a laboriosam odit? Repellendus voluptate, maiores magni quaerat alias veniam officia quas quidem suscipit hic doloremque deserunt nobis corporis deleniti explicabo ad! Recusandae?</p>
-  </article>
+  <img src="/assets/img/Dog_27.jpg" alt="Dog_French">
+  
 </main>
   </body>
 </html>
